--- a/index.html
+++ b/index.html
@@ -5,6 +5,45 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+        <img src="img/index-logo.svg" alt="логотип дизайн-студии NЁRDS">
+        <ul class="site-navigation">
+          <li><a href="studio.html">Студия</a></li>
+            <li><a href="customers.html">Клиенты</a></li>
+              <li><a href="store.html">Магазин</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+          </ul>
+          <ul class="user-navigation">
+            <li><a href="basket.html">Корзина</a></li>
+      </nav>
+    </header>
+    <main class="container">
+      <section class="features">
+        <ul class="features-list">
+          <li class="features-item">
+            <h2>ВЕБ-САЙТЫ</h2>
+            <p>Мир никогда не будет прежним после того как увидит вашсайт!</p>
+            <li><a class="button" href="order.html">Заказать</a></li>
+            <h2>Приложения</h2>
+            <p>Покорите топ-10 в AppStore и Google Play</p>
+            <li><a class="button" href="order.html">Заказать</a></li>
+            <h2>Презентация</h2>
+            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+            <li><a class="button" href="order.html">Заказать</a></li>
+        </section>
+      </main>
+      <footer class="main-footer">
+        <div class="footer-social">
+          <b>Давайте дружить, это выгодно!</b>
+          <ul>
+            <li><a class="social-button" href="#">Вконтакте</a></li>
+            <li><a class="social-button" href="#">Фейсбук</a></li>
+            <li><a class="social-button" href="#">Инстаграм</a></li>
+
+
+      </footer>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
